--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -13,60 +13,21 @@
         margin: 0 0 1rem 0;
     }
 
-    // &__outer-container {
-    //     padding: 0 1.5rem;
-    //     display: flex;
-    //     justify-content: center;
-        
-    // }
-
-    // &__info-box {
-    //     @include border-box;
-    //     padding: 1rem;
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: center;
-
-    //     @include tablet {
-    //         flex-direction: row;
-    //         justify-content: center;
-    //         gap: 2rem;
-    //         width: 65%;
-    //     }
-
-    //     @include desktop {
-    //         width: 40%;
-    //     }
-    // }
-
-    // &__info-container {
-    //     display: flex;
-    //     align-items: center;
-    //     gap: 1rem;
-    // }
-
-    // &__icon {
-    //     height: 2rem;
-    //     cursor: default;
-
-    //     &--email {
-    //         height: 2.5rem;
-    //     }
-    // }
-
-    // &__text {
-    //     font-size: $mobi-paragraph;
-
-    //     @include tablet {
-    //         font-size: $tablet-paragraph;
-    //     }
-    // }
-
     &__screen {
         position: relative;
         background-color: #fbfbfb;
-        border: 0.625rem solid #EEEEEE;
+        border-left: 3rem solid #EEEEEE;
+        border-right: 3rem solid #EEEEEE;
         border-radius: 0.9375rem ;
+        margin: 0 auto;
+        max-width: 700px;
+
+        @include tablet {
+            border-left: 7rem solid #EEEEEE;
+            border-right: 7rem solid #EEEEEE;
+            margin: 0 auto;
+            max-width: 1070px;
+        }
     }
 
     &__screen-header{
@@ -125,6 +86,7 @@
 
     }
 
+
     &__screen-text{
         text-align: center;
         margin-top: 0;
@@ -133,6 +95,8 @@
     &__input-section{
         display: flex;
         background-color: rgba(0, 0, 0, 0.06);
+        border-bottom: 1.5px solid rgb(139, 136, 136);
+        margin-bottom: 1rem;
     }
 
     &__form-label{
@@ -141,9 +105,19 @@
         align-items: center;
         justify-content: center;
         margin: 0 1rem;
+        gap: 0.5rem;
+
+        &--message{
+            justify-content: flex-start;
+            margin-top: 0.5rem;
+        }
     }
 
-    &__input-name{
+    &__label{
+        color: rgb(101, 99, 99);
+    }
+
+    &__input-info{
         font: inherit;
         letter-spacing: inherit;
         color: currentcolor;
@@ -156,5 +130,37 @@
         min-width: 0px;
         width: 100%;
         padding: 25px 12px 8px 0px;
+    }
+
+    &__input-message{
+        width: 100%;
+        padding: 1rem;
+        font-size: 1rem;
+        resize: vertical; 
+        font-family: inherit;
+        color: currentcolor;
+        letter-spacing: inherit;
+        border: 0px;
+        box-sizing: content-box;
+        background: none;
+    }
+
+    &__btn-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__send-btn{
+        all: unset;
+        background-color: #6962ad;
+        color: #eee;
+        font-size: 1.5rem;
+        font-weight: 600;
+        width: 100%;
+        padding: 0.15rem;
+        border-radius: 20px;
+        text-align: center;
+        cursor: pointer;
     }
 }
